--- a/scss/global.scss
+++ b/scss/global.scss
@@ -9,10 +9,12 @@ body {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
         Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    scroll-behavior: smooth;
 }
 
 body::-webkit-scrollbar {
-    width: 15px; /* width of the entire scrollbar */
+    width: 12px; /* width of the entire scrollbar */
+    cursor: pointer;
 }
 
 body::-webkit-scrollbar-thumb {
@@ -27,7 +29,7 @@ body::-webkit-scrollbar-thumb {
 
 // scss variables
 // color variables
-$primary-color: #9b5fd3;
+$primary-color: #6f0dcc;
 $secondary-color: #de8e68;
 $dark-primary: #5702a7;
 $accent-color: #c9870d;
@@ -194,9 +196,22 @@ $orange2: #f5a339;
     }
 
     a {
-        background: lighten($primary-color, 55%) !important;
         font-style: italic;
+        color: $primary-color;
         border-bottom: 1px solid lighten($primary-color, 40%);
+    }
+
+    pre {
+        border: 1px solid #2d3748;
+        font-family: 'Overpass Mono';
+        padding: 10px;
+        border-radius: 5px;
+    }
+
+    blockquote {
+        font-style: italic;
+        border-left: 5px solid #2d3748;
+        padding: 0 10px;
     }
 }
 
