--- a/scss/global.scss
+++ b/scss/global.scss
@@ -4,7 +4,7 @@
     margin: 0;
 }
 html {
-    font-size: 18px;
+    font-size: 17px;
 }
 html,
 body {
@@ -16,13 +16,12 @@ body {
 }
 
 body::-webkit-scrollbar {
-    width: 12px; /* width of the entire scrollbar */
+    width: 8px; /* width of the entire scrollbar */
     cursor: pointer;
 }
 
 body::-webkit-scrollbar-thumb {
-    background-color: #4a5568; /* color of the scroll thumb */
-    border-radius: 20px; /* roundness of the scroll thumb */
+    background-color: #a0a0a0; /* color of the scroll thumb */
 }
 
 // a {
