added a privacy policy and a cookie consent banner to be updated

--- a/scss/global.scss
+++ b/scss/global.scss
@@ -177,6 +177,7 @@ $orange2: #f5a339;
 
 // paragram styles
 .paragraph {
+    // text-align: justify;
     img {
         object-fit: contain;
         width: auto;
@@ -192,8 +193,8 @@ $orange2: #f5a339;
     h1,
     h2,
     h3 {
-        margin: 1rem auto;
-        font-size: 1.2rem;
+        margin: 0.5rem auto;
+        // font-size: 1.2rem;
         font-weight: 600;
     }
 
@@ -204,7 +205,7 @@ $orange2: #f5a339;
     }
 
     pre {
-        border: 1px solid #2d3748;
+        border: 1px solid #323d50ad;
         font-family: 'Overpass Mono';
         padding: 10px;
         border-radius: 5px;
@@ -212,7 +213,7 @@ $orange2: #f5a339;
 
     blockquote {
         font-style: italic;
-        border-left: 5px solid #2d3748;
+        border-left: 5px solid #2d3748bb;
         padding: 0 10px;
     }
 }
