--- a/scss/global.scss
+++ b/scss/global.scss
@@ -24,11 +24,6 @@ body::-webkit-scrollbar-thumb {
     background-color: #a0a0a0; /* color of the scroll thumb */
 }
 
-// a {
-//     color: inherit;
-//     text-decoration: none;
-// }
-
 // scss variables
 // color variables
 $primary-color: #6f0dcc;
@@ -215,7 +210,7 @@ $orange2: #f5a339;
     }
 
     pre {
-        font-family: 'Overpass Mono';
+        font-family: 'Fira Mono', monospace;
         padding: 10px;
         border-radius: 5px;
     }
