--- a/scss/global.scss
+++ b/scss/global.scss
@@ -192,15 +192,15 @@ $orange2: #f5a339;
     }
 
     h1 {
-        font-size: 1.4rem;
+        font-size: 1.2rem;
     }
 
     h2 {
-        font-size: 1.3rem;
+        font-size: 1.1rem;
     }
 
     h3 {
-        font-size: 1.2rem;
+        font-size: 1rem;
     }
 
     a {
@@ -209,15 +209,35 @@ $orange2: #f5a339;
         border-bottom: 1px solid lighten($primary-color, 40%);
     }
 
-    pre {
-        font-family: 'Fira Mono', monospace;
-        border-radius: 5px;
-    }
-
     blockquote {
         font-style: italic;
         border-left: 5px solid #2d3748bb;
         padding: 0 10px;
+    }
+
+    // table styles
+    table {
+        max-width: min-content;
+    }
+
+    tr {
+        border-top: 1px solid #c6cbd1;
+        background: #fff;
+    }
+
+    th,
+    td {
+        font-size: 1rem;
+        padding: 6px;
+        border: 1px solid #dfe2e5;
+
+        @media screen and (max-width: 768px) {
+            font-size: 0.8rem;
+        }
+    }
+
+    table tr:nth-child(2n) {
+        background: #f6f8fa;
     }
 }
 
