--- a/scss/global.scss
+++ b/scss/global.scss
@@ -13,7 +13,7 @@
 }
 
 html {
-    font-size: 17px;
+    font-size: 16px;
 }
 html,
 body {
@@ -186,8 +186,20 @@ $orange2: #f5a339;
 
     a {
         font-style: italic;
-        color: $primary-color;
-        border-bottom: 1px solid lighten($primary-color, 40%);
+        color: darken($primary-color, 15%);
+
+        &:hover {
+            background: lighten($primary-color, 50%);
+        }
+    }
+
+    @media (prefers-color-scheme: dark) {
+        a {
+            color: lighten($primary-color, 30%);
+            &:hover {
+                background: darken($primary-color, 15%);
+            }
+        }
     }
 
     blockquote {
@@ -219,6 +231,13 @@ $orange2: #f5a339;
 
     table tr:nth-child(2n) {
         background: #f6f8fa;
+    }
+
+    code {
+        border-radius: 5px;
+    }
+    pre {
+        border-radius: 5px;
     }
 }
 
