--- a/src/app/styles/global.css
+++ b/src/app/styles/global.css
@@ -66,7 +66,7 @@
         @apply border-border;
     }
     html {
-        @apply scroll-smooth text-base bg-gradient-to-b from-aes-light to-aes-primary;
+        @apply scroll-smooth text-lg bg-gradient-to-b from-aes-light to-aes-primary lg:text-base;
     }
     body {
         @apply bg-brand-background text-foreground;
