--- a/src/app/styles/global.css
+++ b/src/app/styles/global.css
@@ -103,4 +103,8 @@
             sans-serif;
         -webkit-font-smoothing: antialiased;
     }
+    .hero-bg {
+        background: url('/images/hero1.jpg') no-repeat center center/cover;
+        
+    }
 }
