--- a/src/app/styles/global.css
+++ b/src/app/styles/global.css
@@ -4,11 +4,25 @@
 
 @layer base {
     :root {
-        --brand-background:	hsl(35, 100%, 98%);
-        --brand-foreground:	hsl(188, 100%, 5%);
+        --brand-background: hsl(35, 100%, 98%);
+        --brand-foreground: hsl(188, 100%, 5%);
+        --chart-1: 173 58% 39%;
+        --chart-2: 12 76% 61%;
+        --chart-3: 197 37% 24%;
+        --chart-4: 43 74% 66%;
+        --chart-5: 27 87% 67%;
+
+        --aeschart-1: 205, 100%, 7%; /* dark primary */
+        --aeschart-2: 188, 68%, 25%; /* primary */
+        --aeschart-3: 163, 14%, 60%; /* light primary */
+        --aeschart-4: 77, 15%, 76%; /* lighter primary */
+        --aeschart-5: 35, 100%, 91%; /* light */
+        --aeschart-6: 30, 100%, 71%; /* lighter secondary */
+        --aeschart-7: 29, 100%, 50%; /* light secondary */
+        --aeschart-8: 25, 92%, 38%; /* secondary */
+        --aeschart-9: 15, 78%, 26%; /* secondary dark */
     }
 }
-
 
 @layer base {
     * {
@@ -16,7 +30,8 @@
         padding: 0;
         margin: 0;
     }
-    html, body {
+    html,
+    body {
         @apply font-sans antialiased scroll-smooth;
         font-family:
             -apple-system,
