--- a/src/app/styles/global.css
+++ b/src/app/styles/global.css
@@ -1,53 +1,88 @@
 @import 'tailwindcss';
+@import 'tw-animate-css';
 
-@plugin 'tw-animate-css';
 @plugin '@tailwindcss/typography';
 @plugin '@tailwindcss/container-queries';
 
 @custom-variant dark (&:is(.dark *));
 
-:root {
-    --brand-background: hsl(35, 100%, 98%);
-    --brand-foreground: hsl(188, 100%, 5%);
-    --chart-1: hsl(173, 58%, 39%);
-    --chart-2: hsl(12, 76%, 61%);
-    --chart-3: hsl(197, 37%, 24%);
-    --chart-4: hsl(43, 74%, 66%);
-    --chart-5: hsl(27, 87%, 67%);
+@layer base {
+    :root {
+        --chart-1: hsl(173, 58%, 39%);
+        --chart-2: hsl(12, 76%, 61%);
+        --chart-3: hsl(197, 37%, 24%);
+        --chart-4: hsl(43, 74%, 66%);
+        --chart-5: hsl(27, 87%, 67%);
 
-    --aeschart-1: hsl(205, 100%, 7%); /* dark primary */
-    --aeschart-2: hsl(188, 68%, 25%); /* primary */
-    --aeschart-3: hsl(163, 14%, 60%); /* light primary */
-    --aeschart-4: hsl(77, 15%, 76%); /* lighter primary */
-    --aeschart-5: hsl(35, 100%, 91%); /* light */
-    --aeschart-6: hsl(30, 100%, 71%); /* lighter secondary */
-    --aeschart-7: hsl(29, 100%, 50%); /* light secondary */
-    --aeschart-8: hsl(25, 92%, 38%); /* secondary */
-    --aeschart-9: hsl(15, 78%, 26%); /* secondary dark */
+        --aeschart-1: hsl(205, 100%, 7%); /* dark primary */
+        --aeschart-2: hsl(188, 68%, 25%); /* primary */
+        --aeschart-3: hsl(163, 14%, 60%); /* light primary */
+        --aeschart-4: hsl(77, 15%, 76%); /* lighter primary */
+        --aeschart-5: hsl(35, 100%, 91%); /* light */
+        --aeschart-6: hsl(30, 100%, 71%); /* lighter secondary */
+        --aeschart-7: hsl(29, 100%, 50%); /* light secondary */
+        --aeschart-8: hsl(25, 92%, 38%); /* secondary */
+        --aeschart-9: hsl(15, 78%, 26%); /* secondary dark */
+        --sidebar: hsl(0 0% 98%);
+        --sidebar-foreground: hsl(240 5.3% 26.1%);
+        --sidebar-primary: hsl(240 5.9% 10%);
+        --sidebar-primary-foreground: hsl(0 0% 98%);
+        --sidebar-accent: hsl(240 4.8% 95.9%);
+        --sidebar-accent-foreground: hsl(240 5.9% 10%);
+        --sidebar-border: hsl(220 13% 91%);
+        --sidebar-ring: hsl(217.2 91.2% 59.8%);
+
+        /* brand colors */
+        --brand-background: hsl(35, 100%, 98%);
+        --brand-foreground: hsl(188, 100%, 5%);
+        --brandaccent-50: #fff1da;
+        --brandaccent-100: #ffd7ae;
+        --brandaccent-200: #ffbe7d;
+        --brandaccent-300: #ffa44c;
+        --brandaccent-400: #ff8a1a;
+        --brandaccent-500: #e67100;
+        --brandaccent-600: #b45700;
+        --brandaccent-700: #813e00;
+        --brandaccent-800: #4f2400;
+        --brandaccent-900: #200b00;
+
+        --brandprimary-50: #e0fbff;
+        --brandprimary-100: #bbedf4;
+        --brandprimary-200: #94dfea;
+        --brandprimary-300: #6cd2e1;
+        --brandprimary-400: #49c4d8;
+        --brandprimary-500: #32aabe;
+        --brandprimary-600: #238595;
+        --brandprimary-700: #155f6b;
+        --brandprimary-800: #033941;
+        --brandprimary-900: #001518;
+    }
 }
 
 @theme {
-    --color-brandaccent-50: #fff1da;
-    --color-brandaccent-100: #ffd7ae;
-    --color-brandaccent-200: #ffbe7d;
-    --color-brandaccent-300: #ffa44c;
-    --color-brandaccent-400: #ff8a1a;
-    --color-brandaccent-500: #e67100;
-    --color-brandaccent-600: #b45700;
-    --color-brandaccent-700: #813e00;
-    --color-brandaccent-800: #4f2400;
-    --color-brandaccent-900: #200b00;
+    --color-brand-background: var(--brand-background);
+    --color-brand-foreground: var(--color-brand-foreground);
+    --color-brandaccent-50: var(--brandaccent-50);
+    --color-brandaccent-100: var(--brandaccent-100);
+    --color-brandaccent-200: var(--brandaccent-200);
+    --color-brandaccent-300: var(--brandaccent-300);
+    --color-brandaccent-400: var(--brandaccent-400);
+    --color-brandaccent-500: var(--brandaccent-500);
+    --color-brandaccent-600: var(--brandaccent-600);
+    --color-brandaccent-700: var(--brandaccent-700);
+    --color-brandaccent-800: var(--brandaccent-800);
+    --color-brandaccent-900: var(--brandaccent-900);
 
-    --color-brandprimary-50: #e0fbff;
-    --color-brandprimary-100: #bbedf4;
-    --color-brandprimary-200: #94dfea;
-    --color-brandprimary-300: #6cd2e1;
-    --color-brandprimary-400: #49c4d8;
-    --color-brandprimary-500: #32aabe;
-    --color-brandprimary-600: #238595;
-    --color-brandprimary-700: #155f6b;
-    --color-brandprimary-800: #033941;
-    --color-brandprimary-900: #001518;
+    --color-brandprimary-50: var(--brandprimary-50);
+    --color-brandprimary-100: var(--brandprimary-100);
+    --color-brandprimary-200: var(--brandprimary-200);
+    --color-brandprimary-300: var(--brandprimary-300);
+    --color-brandprimary-400: var(--brandprimary-400);
+    --color-brandprimary-500: var(--brandprimary-500);
+    --color-brandprimary-600: var(--brandprimary-600);
+    --color-brandprimary-700: var(--brandprimary-700);
+    --color-brandprimary-800: var(--brandprimary-800);
+    --color-brandprimary-900: var(--brandprimary-900);
 
     --color-brand-background: var(--brand-background);
     --color-brand-foreground: var(--brand-foreground);
@@ -66,9 +101,9 @@
     --transition-duration-700: 700ms;
     --transition-duration-1000: 1000ms;
 
-    --font-heading: Bricolage Grotesque Variable, sans-serif;
-    --font-sans: Bricolage Grotesque Variable, sans-serif;
-    --font-serif: Lora Variable, serif;
+    --font-heading: 'Bricolage Grotesque Variable', sans-serif;
+    --font-sans: 'Bricolage Grotesque Variable', sans-serif;
+    --font-serif: 'Lora Variable', serif;
 
     /* Charts themes */
     --brand-background: var(--brand-background);
@@ -145,18 +180,8 @@
     html,
     body {
         @apply font-sans antialiased scroll-smooth;
-        font-family:
-            -apple-system,
-            BlinkMacSystemFont,
-            Segoe UI,
-            Roboto,
-            Oxygen,
-            Ubuntu,
-            Cantarell,
-            Fira Sans,
-            Droid Sans,
-            Helvetica Neue,
-            sans-serif;
+        font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+            Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
     }
     html {
         @apply scroll-smooth text-lg bg-brand-background;
@@ -164,4 +189,26 @@
     body {
         @apply bg-brand-background text-brand-foreground scroll-smooth;
     }
+}
+
+.dark {
+    --sidebar: hsl(240 5.9% 10%);
+    --sidebar-foreground: hsl(240 4.8% 95.9%);
+    --sidebar-primary: hsl(224.3 76.3% 48%);
+    --sidebar-primary-foreground: hsl(0 0% 100%);
+    --sidebar-accent: hsl(240 3.7% 15.9%);
+    --sidebar-accent-foreground: hsl(240 4.8% 95.9%);
+    --sidebar-border: hsl(240 3.7% 15.9%);
+    --sidebar-ring: hsl(217.2 91.2% 59.8%);
+}
+
+@theme inline {
+    --color-sidebar: var(--sidebar);
+    --color-sidebar-foreground: var(--sidebar-foreground);
+    --color-sidebar-primary: var(--sidebar-primary);
+    --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
+    --color-sidebar-accent: var(--sidebar-accent);
+    --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
+    --color-sidebar-border: var(--sidebar-border);
+    --color-sidebar-ring: var(--sidebar-ring);
 }
